# LA28

./: .gitignore  README.md  events.csv  events.json  load_data.py  osm.py  pyproject.toml  read.py  sessions.json  sesssions.csv  venue_addresses.json
parsed/: events.csv  events.json  la28.db  la28.xlsx  sessions.csv  sessions.json  sports.csv  sports.json  venues.csv  venues.json  zones.csv  zones.json
resources/: la28-schedule.json  venues_osm.json
src/la28/: __init__.py  database.py  export.py  models.py  parsing.py  schema.py
src/la28/queries/: __init__.py  event_query.py  schedule_query.py  session_query.py
