[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "la28"
version = "0.1.0"
description = "LA28 Olympics Schedule Database"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
dependencies = [
    "sqlmodel>=0.0.16",
    "requests>=2.28.0",
    "pdfplumber>=0.10.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/la28"]

[tool.hatch.build.targets.sdist]
include = ["src/la28"]
